# iShelter

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
iShelter/: asgi.py  settings.py  urls.py  wsgi.py
shelter/: admin.py  models.py  urls.py  views.py
shelter/migrations/: 0001_initial.py  0002_alter_catbreed_name_alter_dogbreed_name.py  0003_petphoto_main.py  0004_alter_petphoto_main.py  0005_pet_content_type_pet_object_id_alter_petphoto_photo.py
templates/: base.html  styles.css
templates/shelter/: home.html  pet.html  shelter.html
